Update contributors lifecycle segments

--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/operations/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/operations/index.html.md.erb
@@ -256,9 +256,10 @@ In an effort of understanding, supporting and empowering the GitLab code contrib
 
 | Name | Description | Requirements |
 | --- | --- | --- |
-| New Code Contributors  | People who have contributed to GitLab at least once. | 1 MR merged |
-| Active Code Contributors | GitLab's currently active code contributors.  | 1+ merged MR during the last 6 months |
-| High Performing Code Contributors | People with a significant number of MRs. | 10+ merged MRs in one milestone OR 1+ merged MRs across 3 milestones |
+| First time Code Contributors | People who have contributed to GitLab for the first time. | 1st MR merged |
+| Code Contributors | People who have contributed to GitLab more than one MRs. | 1+ MR merged | 
+| Active Code Contributors | GitLab's currently active code contributors. | 5+ merged MRs during the last 6 months |
+| [Leading organizations](https://about.gitlab.com/handbook/marketing/community-relations/leading-organizations/) | People with a significant number of MRs. | 20 merged merge requests or more over a trailing three full calendar month basis. |
 | Inactive Code Contributors | People who haven't been contributing for the past 6 months | Not a merged MR for 6+ months|
 | Reactivated Code Contributors | People who became inactive and then active again | 1+ merged MR during the last 6 months after not having an MR merged for more than 6 months |
 
