Sunset devops-tools in favor of competition

--- a/sites/uncategorized/source/devops-tools/index.html.haml
+++ b/sites/uncategorized/source/devops-tools/index.html.haml
@@ -3,6 +3,7 @@ layout: default
 title: DevOps Tools vs GitLab
 description: "Compare GitLab to other DevOps tools. Review the pros and cons of each to help make your decision easier."
 canonical_path: "/devops-tools/"
+noindex: true
 suppress_header: true
 image_title: '/images/devops-tools/title_image.png'
 extra_css:
