Update FY23 work completed

--- a/source/direction/product-operations/template.html.md.erb
+++ b/source/direction/product-operations/template.html.md.erb
@@ -99,7 +99,7 @@ _Supports [Outcome driven products](#operationalizing-outcome-driven-products)_
 
 **Streamline the general and product management specific onboarding workflows to better compliment each other.**  
 
-**Why?**  Minimize the amount of time it takes for product managers to ramp up to be ready to perform their job successfuly at GitLab.
+**Why?**  Minimize the amount of time it takes for product managers to ramp up to perform their job successfully at GitLab.
 
 **How are we measuring success?**
 
@@ -132,7 +132,6 @@ _Supports [Outcome driven products](#operationalizing-outcome-driven-products)_
 - [x] Create an SSOT for documentatin of deprecations, removals and breaking changes in GitLab Docs
      - [x] Add a content filtering mechanism to the depreciations docs page
      - [ ] Add a content filtering mechanism to the removals docs page
-- [ ] Reduce the number of deprecations and removals documentation pages from 2 to 1
 - [ ] Identify a soluton to enable users to receive push notifications (such as email, RSS, pub/sub) about breaking changes 
 
 #### Grow GitLab's post purchase survey
@@ -147,9 +146,9 @@ _Supports [Feedback loops](#building-qualitative--quantitative-feedback-loops)_
 - [ ] 90% reduction of aggregate manual work needed to perform/share out  quarterly analysis (from 80 hours --> 8 hours)
 - [ ] Reduce the number of manual interventions required to add PPS data to `features.yml` to 0
 - [ ] Take manual calculation error risk to 0%  by implementing full automation between SFDC, Qualtrics and Sisense for:
-    - [ ]  quarterly feature counts
+    - [x]  quarterly feature counts
     - [ ]  all time feature counts
-    - [ ]  quarterly ARR segmentation
+    - [x]  quarterly ARR segmentation
     - [ ]  all time ARR segmentation
 
 **Expand data types collected by post purchase survey to include web direct sales.**
@@ -226,6 +225,7 @@ The areas of ownership below highlight workflows and processes for which Product
 - [Product manager onboarding and training](https://about.gitlab.com/handbook/product/product-manager-role/#product-manager-onboarding)
 - [Product manager role](https://about.gitlab.com/handbook/product/product-manager-role/) and [responsibilities](https://about.gitlab.com/handbook/product/product-manager-responsibilities/)
 - [Product team epic, issue and MR templates and workflow automations](https://gitlab.com/gitlab-com/Product/-/tree/main/.gitlab/issue_templates)
+- [Product team meetings](https://about.gitlab.com/handbook/product/product-processes/#team-meetings)
 - [Product team OKR workflow and facilitation](https://about.gitlab.com/handbook/product/product-okrs/)
 
 ## Areas of Advisement
