Update Workers Compensation Reporting Instructions

--- a/sites/handbook/source/handbook/people-policies/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-policies/index.html.md.erb
@@ -144,7 +144,13 @@ Exceptions to this procedure will be tracked as per the [Information Security Po
 
 ### Workers' Compensation
 
-If you have been injured at work, at a co-working site, or traveling to a customer location please contact the Absence Management team (leaves@gitlab.com).  The Absence Management team may provide you with paperwork to file your claim and explain your benefits. 
+If you have been injured at work, at a co-working site, or traveling to a customer location please contact the Absence Management team (leaves@gitlab.com).  The Absence Management team will provide you with paperwork to file your claim and explain your benefits. 
+    - CA Team Members Only:  Complete this [form](https://www.dir.ca.gov/dwc/DWCForm1.pdf) and email to the Absence Management Team.
+
+The following states are considered “monopolistic” workers compensation states, meaning employers must purchase workers compensation coverage directly from the state.  If a team member in these states is injured, they may file the claim themselves or the Absence Management Team will file on their behalf. **Team members in these States are still required to contact the Absence Management Team, even if they file their own claim through the State.**
+    - [Ohio](https://info.bwc.ohio.gov/)
+    - [Washington](https://www.lni.wa.gov/)
+    - [North Dakota](https://www.workforcesafety.com/) 
 
 ### Hiring Significant Others or Family Members
 
