--- a/sites/uncategorized/source/company/kpis/index.html.md.erb
+++ b/sites/uncategorized/source/company/kpis/index.html.md.erb
@@ -47,7 +47,7 @@ GitLab KPIs are the 10 most important indicators of company performance, and the
 We review these at each quarterly meeting of the Board of Directors.
 These KPIs are determined by a combination of their stand alone importance to the company and the amount of management focus devoted to improving the metric.
 
-1. [Net ARR](https://about.gitlab.com/handbook/sales/sales-term-glossary/arr-in-practice/#net-arr){:data-ga-name="net arr"}{:data-ga-location="body"} vs. plan[🔗](https://app.periscopedata.com/app/gitlab/832223/Sales-KPI's?widget=11155197&udv=0) (lagging) **North Star KPI**
+1. [Revenue](https://about.gitlab.com/company/kpis/#sales-kpis) vs. plan (lagging) **North Star KPI**
 1. [R&D Overall MR Rate](/handbook/engineering/performance-indicators/#rd-overall-mr-rate){:data-ga-name="rd mr rate"}{:data-ga-location="body"}[📊](https://app.periscopedata.com/app/gitlab/710733/GitLab-Project-Efficiency?widget=9287585) (leading)
 1. [Estimated Combined Monthly Active Users (CMAU)](/handbook/product/performance-indicators/#estimated-combined-monthly-active-users){:data-ga-name="CMAU"}{:data-ga-location="body"} [📊](https://app.periscopedata.com/app/gitlab/634200/Usage-Ping-SMAU-Dashboard?widget=9051075) (leading)
 1. [Net New Business Pipeline Created ($s)](/handbook/marketing/performance-indicators/#net-new-business-pipeline-created){:data-ga-name="pipeline created"}{:data-ga-location="body"} 🐔 (leading)
