Correct link to Heroes Alumni page

--- a/sites/uncategorized/source/community/heroes/members/index.html.haml
+++ b/sites/uncategorized/source/community/heroes/members/index.html.haml
@@ -38,7 +38,7 @@ extra_js:
 .wrapper
   .row.text-center
     .btn-group.u-padding-right-sm
-    = link_to "Heroes Alumni", "/community/alumni/", class: "btn cta-btn orange margin-top20"
+    = link_to "Heroes Alumni", "/community/heroes/alumni/", class: "btn cta-btn orange margin-top20"
     = link_to "Recent contributions", "/community/heroes/contributions/", class: "btn cta-btn orange margin-top20"
     = link_to "Add yourself to this page", "/handbook/marketing/community-relations/evangelist-program/#adding-yourself-to-the-heroes-page", class: "btn cta-btn orange margin-top20"
 
