--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
@@ -68,4 +68,4 @@ Please refer to the [nomination criteria and form for more details](handbook/mar
 
 ## Code Contributor Program operations
 
-GitLab team members or the Code Contributor Program manager can refer to the [Code Contributor Operations handbook page](handbook/marketing/community-relations/code-contributor-program/operations/) for all the necessary information about the program.
+GitLab team members or the Code Contributor Program manager can refer to the [Code Contributor Operations handbook page](operations/) for all the necessary information about the program.
