--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/index.html.md.erb
@@ -21,7 +21,7 @@ In FY23 we will be focused on innovative test architecture, efficiency, and cust
 
 ### Self-Managed Excellence
 
-Quality Engineering owns several tools which form a 3-prong trident for Self-Managed Excellence: the [GitLab Environment Toolkit (GET)](https://gitlab.com/gitlab-org/gitlab-environment-toolkit), the [GitLab Performance Tool (GPT)](https://gitlab.com/gitlab-org/quality/performance), and the [Reference Architectures (RA)](https://docs.gitlab.com/ee/administration/reference_architectures/). Together, these tools support our broader strategy of cementing customer confidence and contributing to their ongoing success by ensuring their instances are built to a rigorously tested standard that performs smoothly at scale. 
+Quality Engineering owns several tools which form a 3-prong trident for Self-Managed Excellence: the [GitLab Environment Toolkit (GET)](https://gitlab.com/gitlab-org/gitlab-environment-toolkit), the [GitLab Performance Tool (GPT)](https://gitlab.com/gitlab-org/quality/performance), and the [Reference Architectures (RA)](https://docs.gitlab.com/ee/administration/reference_architectures/). Together, these tools support our broader strategy of cementing customer confidence and contributing to their ongoing success by ensuring their instances are built to a rigorously tested standard that performs smoothly at scale.
 
 ```mermaid
 flowchart LR
@@ -180,14 +180,14 @@ The area a QEM is responsible for is defined in the [Product Stages and Groups](
 Milestones (product releases) are one of our [planning horizons](/handbook/product/product-processes/#planning-horizons), where prioritization is a collaboration between Product, Development, UX, and Quality. [DRIs](/handbook/people-group/directly-responsible-individuals/) for prioritization are based on work type:
 
 * Feature - PM
-* Maintenance - EM 
+* Maintenance - EM
 * Bug - QEM
 
 We use [type labels](/handbook/engineering/metrics/#work-type-classification) to track: feature, maintenance, and bug issues and MRs. UX Leadership are active participants in influencing the prioritization of all three work types.
 
-QEMs meet with their PM, EM, and UX counterparts to discuss the priorities for the upcoming milestone. The purpose of this is to ensure that everyone understands the requirements and to assess whether or not there is the capacity to complete all of the proposed issues. 
+QEMs meet with their PM, EM, and UX counterparts to discuss the priorities for the upcoming milestone. The purpose of this is to ensure that everyone understands the requirements and to assess whether or not there is the capacity to complete all of the proposed issues.
 
-For product groups with a SET counterpart, QEMs are encouraged to delegate bug prioritization to the SET as the bug subject matter expert for that group. In these situations, QEMs should provide guidance and oversight as needed by the SET and should still maintain broad awareness of bug prioritization for these delegated groups. 
+For product groups with a SET counterpart, QEMs are encouraged to delegate bug prioritization to the SET as the bug subject matter expert for that group. In these situations, QEMs should provide guidance and oversight as needed by the SET and should still maintain broad awareness of bug prioritization for these delegated groups.
 
 While we follow the [product development timeline](/handbook/engineering/workflow/#product-development-timeline), it is recommended that you work with your counterparts to discuss upcoming issues in your group's roadmap prior to them being marked as a deliverable for a particular milestone. There will be occasions where priorities shift and changes must be made to milestone deliverables. We should remain flexible and understanding of these situations, while doing our best to make sure these exceptions do not become the rule.
 
@@ -244,6 +244,24 @@ For more information, please visit our [test engineering page](test-engineering)
 ### Test failures
 
 If you need to debug a test failure, please visit our [debugging QA pipeline test failures page](debugging-qa-test-failures).
+
+## ChatOps for Quality
+
+The Quality Engineering Sub-Department maintains [ChatOps](https://docs.gitlab.com/ee/development/chatops_on_gitlabcom.html) commands
+for Quality department which provides quick access to various information on Slack. These commands can be run on any Slack channel that has
+the GitLab ChatOps bot such as the [#quality](https://slack.com/app_redirect?channel=C3JJET4Q6) and [#chat-ops-test](https://slack.com/app_redirect?channel=CB2S7NNDP) channels.
+
+Commands that are currently available are:
+
+| Command                              | Description |
+| ------------------------------------ | ----------- |
+| `/chatops run quality dri schedule`  | Lists the current schedule for [on-call rotation](oncall-rotation) |
+| `/chatops run quality dri report`    | Show current and previous Quality pipeline triage reports |
+| `/chatops run quality dri incidents` | Lists currently active and mitigated incidents |
+
+For more information about these commands you can run:
+
+`/chatops run quality --help`
 
 ## Submitting and reviewing code
 
