Add a line item for Sam as acting PM

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -44,6 +44,7 @@
 [Mark Wood]: /company/team/#mjwood
 [Sam Kerr]: /company/team/#stkerr
 [Sam Kerr (Interim)]: /company/team/#stkerr
+[Sam Kerr (Acting)]: /company/team/#stkerr
 [Sam Kerr (Life Support)]: /company/team/#stkerr
 [Sam White]: /company/team/#sam.white
 [Gayle Doud]: /company/team/#gdoud
