--- a/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
@@ -43,16 +43,17 @@ In support of improving these results, we are focusing on:
 Continuing the collaborative efforts from the previous year throughout FY23 to gain additional reliability.
 1. Allocating effort towards managing tech debt backlog both through [Corrective Action](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#corrective-action-slo) burndown, [Infradev efficiency](https://app.periscopedata.com/app/gitlab/899982/InfraDev) (internal only), and investing further in key project focus.
 1. Achieve key deliverables for our database platform in collaboration with Development. Key among these are current decomposition efforts and additional scaling efforts arising from that project.
-1. Deliver results from the focus on key cross-functional efforts specifically targeting Reliability
+1. Deliver results from the focus on key cross-functional efforts specifically targeting Reliability. Efforts starting in Q3 will focus more specifically on Disaster Recovery. These efforts are expected to continue through FY24.
 
 ### 2) Platform Improvements to Power New Revenue
 
-Contribute new platform management capabilities to expand our ability to meet our customers SaaS offering needs.
+Contribute new platform management capabilities to expand our ability to meet our customers SaaS offering needs. GitLab Dedicated has been and will continue to be the focus of this effort. Much of our investment in Dedicated will also fuel other future platform efforts to continue offering customers our services where they want to consume them and to also scale our SaaS platform to many times future growth.
 
 ### 3) Develop Depth in Key Technical Areas
 
-1. Continue current Redis focus from the new second Scalability team and evolve that focus as the scale increases but the maintenance becomes more boring. This may involve new teams focused on a vertical technology (like Redis) while Scalability moves on to a new challenge.
-1. Build on what we’ve started in the [Squad project model](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/projects.html#project-squads----squad-list) and see more results from small groups focusing on fewer concurrent efforts.
+1. Continue new contributions from our expansion of both the Scalability and Delivery teams and evolve that focus as the stage in the lifecycle of the challenge changes. This may involve new teams in our Reliability compartment focused on a vertical technology (like Redis) while Scalability and Delivery move on to new challenges.
+1. Iterate further on what we’ve started in the [Squad project model](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/projects.html#project-squads----squad-list) now that we've both expanded the Reliability SRE team and achieved scale with our Reliability leadership team. 
+1. Utilize continuing Reliability compartment expansion to create clear ownership of key underlying technologies. Establish roadmaps for the future in owned areas and enable team members to expand their skills with opportunities for specialization.
 1. Partner with Development teams to fulfill initial [Stable Counterpart](https://about.gitlab.com/handbook/engineering/infrastructure/#stable-counterparts) influence. As our staffing increases above the minimum oncall level, dedicate a larger percentage of new team member capacity towards enabling more efficiency and ownership across all of Engineering.
 
 ### 4) Invest in Team Members Capabilities
