Remove Package weekly sync meeting

--- a/sites/handbook/source/handbook/engineering/development/ops/package/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/index.html.md.erb
@@ -159,19 +159,9 @@ We have created a collection of Tips and Tricks for folks working with/around th
 
 | Meeting | Purpose |
 | :-------- | :---- |
-| Weekly sync | Share news and information and provide an opportunity for people on the team to escalate concerns. In addition, the weekly sync includes a rotating agenda of Product, UX, and Engineering specific topics. |
+| Biweekly sync (rotate EMEA/APAC) | Share news and information and provide an opportunity for people on the team to escalate concerns. |
 | Retrospective (weekly) | Discuss not only what went well or not but also how we did things and what we can do to improve for next week. |
 | Think BIG (monthly) | Discuss the vision, product roadmap, user research, design, and delivery around the Package solution. |
-
-#### Weekly sync
-
-The weekly sync is the Package group's first touchpoint of the week. In addition to an opportunity to share any relevant updates or concerns, the team cycles through a rotating (weekly) agenda. For example:
-
-- Week 1: Review the upcoming milestone plan.
-- Week 2: Performance and reliability updates.
-- Week 3: Check in on current milestone merge request types.
-- Week 4: Design and research review and updates.
-- Week 5: Customer updates and data insights.
 
 ### Retrospectives
 
