Updating kick-off title and youtube links for 15.6 release

--- a/source/direction/kickoff/template.html.md.erb
+++ b/source/direction/kickoff/template.html.md.erb
@@ -1,11 +1,11 @@
 ---
 layout: markdown_page
-title: "Product Kickoff Review 15.5"
+title: "Product Kickoff Review 15.6"
 canonical_path: "/direction/kickoff/"
 ---
-<% keyValue = "15.5" # Update this to match the page title %>
-<% youTubeKickoffVideoID = "h3LhQDCUyPs" # Update this to match the YouTube Kickoff Video ID for this release %>
-<% youTubeListID = "PL05JrBw4t0KqjpzFtMqqkPFPj6UZrRFzn" # Update this to match the YouTube Playlist ID for this release %>
+<% keyValue = "15.6" # Update this to match the page title %>
+<% youTubeKickoffVideoID = "LxqoQXeEdbo" # Update this to match the YouTube Kickoff Video ID for this release %>
+<% youTubeListID = "PL05JrBw4t0KqDhDoYEJiV1mq87aXxh6vu" # Update this to match the YouTube Playlist ID for this release %>
 - TOC
 {:toc}
 
