Implement a stage-level engineering team page for Plan

--- a/sites/handbook/source/handbook/product/categories/plan/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/categories/plan/index.html.md.erb
@@ -14,9 +14,10 @@ title: "Plan Stage"
 
 Plan teams:
 
-- [Plan:Project Management Backend Team](/handbook/engineering/development/dev/plan-project-management-be/)
-- [Plan:Product Planning Backend Team](/handbook/engineering/development/dev/plan-product-planning-certify-be/)
-- [Plan Frontend Team](/handbook/engineering/development/dev/fe-plan/)
+- [Plan:Project Management Team](/handbook/engineering/development/dev/plan-project-management/)
+- [Plan:Product Planning Team](/handbook/engineering/development/dev/plan/product-planning/)
+- [Plan:Certify Team](/handbook/engineering/development/dev/plan/certify/)
+- [Plan:Optimize Team](/handbook/engineering/development/dev/manage/optimize/)
 
 The responsibilities of this collective team are described by the [Plan stage](/handbook/product/categories/#plan-stage). Among other things, this means
 working on GitLab's functionality around issues, issue boards, milestones, to-do list, issue lists and filtering, roadmaps, time tracking, requirements management, and notifications.
@@ -25,7 +26,7 @@ working on GitLab's functionality around issues, issue boards, milestones, to-do
 
 In GitLab issues, questions should start by @ mentioning the Product Manager for the [corresponding Plan stage group](/handbook/product/categories/#plan-stage). GitLab team-members can also use [#s_plan](https://gitlab.slack.com/messages/C72HPNV97).
 
-For UX questions, @ mention the Product Designers on the Plan stage. Currently that is [Holly Reynolds](https://gitlab.com/hollyreynolds) for Plan:Project Management and [Alexis Ginsberg](https://gitlab.com/uhlexsis) for Plan:Product Planning and Plan:Certify.
+For UX questions, @ mention the Product Designers on the Plan stage; [Nick Leonard](https://gitlab.com/nickleonard) for Plan:Project Management, [Alexis Ginsberg](https://gitlab.com/uhlexsis) for Plan:Product Planning, [Dan Mizzi-Harris](https://gitlab.com/danmh) for Plan:Certify and [Blair Christopher](https://gitlab.com/badnewsblair) for Plan:Optimize.
 
 ### How we work
 
@@ -106,7 +107,7 @@ graph TD;
 
 ### Talking With Customers
 
-In a perfect world, we would have cross-functional representation in every conversation we have with customers. To help work towards realizing this, anyone who is scheduling a call with a customer via sales, conducting usabiity reasearch, or generally setting up a time to speak with customers or prospects is encouraged to add [the Plan Customer Interviews calender](https://calendar.google.com/calendar/u/0/embed?src=gitlab.com_5icpbg534ot25ujlo58hr05jd0@group.calendar.google.com) as an invitee to the event. This will automatically populate the shared calendar with upcoming customer and user iteractions. All team members are welcome and encouraged to join -- even if it's just to listen in and get context. 
+In a perfect world, we would have cross-functional representation in every conversation we have with customers. To help work towards realizing this, anyone who is scheduling a call with a customer via sales, conducting usabiity reasearch, or generally setting up a time to speak with customers or prospects is encouraged to add [the Plan Customer Interviews calender](https://calendar.google.com/calendar/u/0/embed?src=gitlab.com_5icpbg534ot25ujlo58hr05jd0@group.calendar.google.com) as an invitee to the event. This will automatically populate the shared calendar with upcoming customer and user iteractions. All team members are welcome and encouraged to join -- even if it's just to listen in and get context.
 
 You can subscribe to the calendar and invite it as a participant in a customer meeting that you are scheduling using the URL [gitlab.com_5icpbg534ot25ujlo58hr05jd0@group.calendar.google.com](gitlab.com_5icpbg534ot25ujlo58hr05jd0@group.calendar.google.com).
 
@@ -210,9 +211,9 @@ If there are no agenda items eight hours prior to the call, we skip the call ent
 
 ### Team Process
 
-Each group within the Plan stage follows GitLab's [product development flow](https://about.gitlab.com/handbook/product-development-flow/) and [process](https://about.gitlab.com/handbook/product/product-processes/). This allows for consistency across the stage, enables us to align with other stages and stable-counterparts, and enables us to clearly understand our throughput and velocity. We're currently focused on strictly following the process stated in the handbook, as opposed to creating our own local optimizations. 
-    
-In some cases we need to dogfood a new Plan feature that may adjust our adherence to the GitLab's process. If that happens we assign a DRI responsible for setting the objective, reporting on the outcomes and facilitating feedback to ensure we prioritize improvements to our own product. This ensures we're not making a change for the sake of making changes, and gives us clarity into our own evaluation of a change to the product. 
+Each group within the Plan stage follows GitLab's [product development flow](https://about.gitlab.com/handbook/product-development-flow/) and [process](https://about.gitlab.com/handbook/product/product-processes/). This allows for consistency across the stage, enables us to align with other stages and stable-counterparts, and enables us to clearly understand our throughput and velocity. We're currently focused on strictly following the process stated in the handbook, as opposed to creating our own local optimizations.
+
+In some cases we need to dogfood a new Plan feature that may adjust our adherence to the GitLab's process. If that happens we assign a DRI responsible for setting the objective, reporting on the outcomes and facilitating feedback to ensure we prioritize improvements to our own product. This ensures we're not making a change for the sake of making changes, and gives us clarity into our own evaluation of a change to the product.
 In some cases we need to dogfood a new Plan feature that may adjust our adherence to the GitLab's process. If that happens we assign a DRI responsible for setting the objective, reporting on the outcomes and facilitating feedback to ensure we prioritize improvements to our own product. This ensures we're not making a change for the sake of making changes, and gives us clarity into our own evaluation of a change to the product.
 
 There are a couple of process-related improvements we'll continue to adopt:
@@ -221,7 +222,7 @@ There are a couple of process-related improvements we'll continue to adopt:
 
 ### Product Outreach
 
-There can be a gap in understanding between Engineering and Product on a team. We are experimenting with a pilot programme that will allow engineers to spend time in the world of Product, with the goal of greater mutual communication, understanding and collaboration. It helps us work more effectively as a team for better features. 
+There can be a gap in understanding between Engineering and Product on a team. We are experimenting with a pilot programme that will allow engineers to spend time in the world of Product, with the goal of greater mutual communication, understanding and collaboration. It helps us work more effectively as a team for better features.
 
 #### Product Shadowing schedule
 
