--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/operations/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/operations/index.html.md.erb
@@ -28,6 +28,29 @@ You can use either channel to reply, as they are bidirectional. However, bear in
 - No mentions
 - See the [full list of bridge limitations](https://sameroom.io/limitations#slack)
 
+### Organizing and promoting events for/to the community
+#### Event planning
+- Draft an agenda before the meeting, including (make sure the document is open to anyone with the link)
+  - Roll call, introductions
+  - Various topics
+  - Open floor for the community to bring topics
+- Include instructions on how to join
+  - Link to zoom (or any other video platform)
+- Add the event to the [Developer Evangelism calendar](/handbook/marketing/community-relations/developer-evangelism/#-team-calendar). If you are not a GitLab Team Member, ask the [Code Contributor Program Manager](/handbook/marketing/community-relations/code-contributor-program/#contact) or one of the [Developer Evangelism Team Members](/handbook/marketing/community-relations/developer-evangelism/#-team-members-and-focus-areas) to add the event to the calendar.
+- Bring the event to the attention of the [Code Contributor Program Manager](/handbook/marketing/community-relations/code-contributor-program/#contact).
+- Follow the instructions below for social support or open a request at the [Code Contributor's planning repo](https://gitlab.com/gitlab-com/marketing/community-relations/contributor-program/general/issues/new?issuable_template=event-support-request).
+#### Social
+- Draft a short action-oriented copy like: "Join the upcoming GitLab hackathon (link) on the N."
+- Share the message on the following channels at least 2 weeks before, 1 week, and a day before the event:
+  - Twitter: use your account but mention `@gitlab` (note: never share a Zoom link on Twitter)
+  - [Gitter Contributors channel](https://gitter.im/gitlab/contributors)
+  - [Gitter GitLab channel](https://gitter.im/gitlab/gitlab)
+  - [GitLab Community Discord](https://discord.gg/ZAfY5hXRyy)
+#### Event platforms
+- Ask [Christos Bacharakis](https://gitlab.com/cbacharakis), [Jamie Rachel](https://gitlab.com/jrachel1) or [John Coghlan](https://gitlab.com/johncoghlan) for adding the event on [meetup.com](https://www.meetup.com/gitlab-virtual-meetups/). 
+- Add the event on [GitLab Events page](https://about.gitlab.com/events/).
+
+
 #### Hackathons
 
 There will be a quarterly [Hackathon](/community/hackathon/) for GitLab community members to come together to work on merge requests, participate in tutorial sessions, and support each other on the [GitLab contributors channel](https://gitter.im/gitlabhq/contributors).  Agenda, logistics, materials, recordings, and other information for Hackathons will be available on the [Hackathon project pages](https://gitlab.com/gitlab-com/marketing/community-relations/contributor-program/gitlab-hackathon).
@@ -76,6 +99,16 @@ All the community office hour calls should be added to the [Developer Evangelism
 #### Community challenge
 
 To encourage contribution to priority issues on an on-going basis (and not just during Hackathons), we will maintain a list of up to 5 priority issues for each [product stage](/handbook/product/categories/) and prizes will be given to wider community members who have MRs merged for these issues. These issues will have the label [`Community challenge`](https://gitlab.com/groups/gitlab-org/-/issues?label_name%5B%5D=Community+challenge) and more details such as prizes, assignment of these issues, etc.
+
+### Community Newsletter
+We run a [Community Newsletter](https://about.gitlab.com/community/newsletter/) to share developer-focused content, alert community members about upcoming events, and keep contributors engaged. The focus of the newsletter is on driving contributions and engagement. It will not be used to generate or nurture leads and allow us to connect with and share our community's contributions. 
+Submissions to the newsletter are always welcome. To share a contribution or a project you're working on with GitLab, find an active Newsletter Issue with the label [`Community Newsletter::Draft`](https://gitlab.com/groups/gitlab-com/-/issues/?label_name%5B%5D=Community%20Newsletter%3A%3A%20Draft) and add your content to the description. 
+
+#### Newsletter Process: 
+1. The Community Newsletter DRIs (@sugaroverflow @cbacharakis) create an issue for the draft, add a deadline, and tag team members to add section content. 
+1. Once ready, they add the `Community Newsletter::Ready` label and move content to Mailjet.
+1. After the Newsletter has been sent, add the `Community Newsletter::Feedback` and add a week to the due date to collect any feedback on the issue. 
+
 
 #### Issues for new contributors
 
@@ -130,7 +163,7 @@ For community contributors to contribute to the [GitLab Enterprise Edition](http
 
 #### For contributors who run out of CI minutes
 
-Wider community members may run out monthly CI minutes as they are working on an MR. Community members can send a request to reset their CI minutes to `contributors@gitlab.com` in order to continue their work. After reviewing the request, a Community Relations team member will file an issue with the [GitLab.com Support Team](https://gitlab.com/gitlab-com/support/internal-requests/issues/new?issuable_template=pipeline_reset_request) using the `pipeline_reset_request` template. Information on the community member name, username, and link to the MR that requires additional CI minutes will need to be provided in the issue.
+Wider community members may run out monthly CI minutes as they are working on an MR. Community members can send a request to reset their CI minutes to `contributors@gitlab.com` in order to continue their work. After reviewing the request, a Community Relations team member will file an issue with the [GitLab.com Support Team](https://gitlab-com.gitlab.io/support/internal-requests-form/) using the `Other -> Other (nothing else fits the request)`  template. Information on the community member name, username, and link to the MR that requires additional CI minutes will need to be provided in the issue.
 
 #### For contributors who max out on other CI/CD resources
 
@@ -289,6 +322,10 @@ Identity management is available on Bitergia's [HatStall](https://gitlab.biterg.
 #### Advanced features and login
 
 Some administrative features for Bitergia dashboards (e.g. getting a short URL, creating a new permanent dashboard) require a login, and the login information is available in the Team Vault on 1Password.
+
+#### Bitergia License
+
+GitLab has a subscription with Bitergia for an annual membership renewed on the 1st of October each year. Bitergia is responsible for sending a Statement of Work (SOW) to be signed by GitLab, a month prior the expiration of the license. The Code Contributor Program Manager should include the Bitergia subscription in the program's annual budget planning.
 
 #### Contacting Bitergia support
 
