Add link to Google Cloud Storage

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -13,8 +13,8 @@ postType: announcement
 ---
 
 Over the next month, requests for GitLab CI artifacts downloads may be redirected
-to a [Google Cloud CDN](https://cloud.google.com/cdn) URL instead of
-Google Cloud Storage. We expect GitLab CI users to benefit from faster
+to [Google Cloud CDN](https://cloud.google.com/cdn) instead of
+[Google Cloud Storage](https://cloud.google.com/storage). We expect GitLab CI users to benefit from faster
 downloads from edge caches closest to your location.
 
 **Disclaimer** This blog contains information related to upcoming products, features, and functionality. It is important to note that the information in this blog post is for informational purposes only. Please do not rely on this information for purchasing or planning purposes. As with all projects, the items mentioned in this blog and linked pages are subject to change or delay. The development, release, and timing of any products, features, or functionality remain at the sole discretion of GitLab.
