Amend firewall language

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -47,6 +47,6 @@ plan.
 Since GitLab CI runners and most clients automatically handle URL
 redirections already, most users will not see an impact.
 
-However, if you have a firewall that restricts access for
+However, if you have a firewall that only allows
 `storage.googleapis.com`, you will need to add
 `cdn.artifacts.gitlab-static.net` to the allow list as well.
