Move PIs from business technology page to data team page

--- a/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
@@ -160,6 +160,59 @@ We measure this based on time of team members spent on [Level 1 and Level 2 work
 
 We periodically generate [Data Team CSAT](https://about.gitlab.com/handbook/business-technology/data-team/how-we-work/#customer-satisfaction-survey-csat) to seek feedback from internal customers.
 
+#### Other PIs
+
+##### Infrastructure Cost vs Plan
+
+This performance indicator tracks the financial position of the actual cost vs the planned costs for the data infrastructure (warehouse, ETL pipelines, etc.).
+
+**Aligns with the following core business objectives**:
+
+- Follow and improve our processes for maintaining high quality data and reporting.
+- Tracks the financial cost of the data infrastructure set up.
+
+##### Mean Time between Failures (MTBF)
+
+This performance indicator tracks the mean time since last system failure based on set cadence.
+
+**Aligns with the following core business objectives**:
+
+- Follow and improve our processes for maintaining high quality data and reporting.
+- Ensure goal to keep systems up and running while giving insights into partnership with Infrastructure team.
+- Ensure data availability for data analytics and reporting for business units to make data-driven decisions.
+
+##### Mean Time to Repair (MTTR)
+
+This performance indicator tracks the mean time to get the system back up and running based on set cadence.
+
+**Aligns with the following core business objectives**:
+
+**Data Team**
+
+- Follow and improve our processes for maintaining high quality data and reporting.
+- Ensure goal to keep systems up and running while giving insights into partnership with Infrastructure team.
+- Ensure data availability for data analytics and reporting for business units to make data-driven decisions.
+
+##### Percent (%) of company data in data warehouse
+
+Percentage of all company data in data warehouse
+
+**Aligns with the following core business objectives**:
+
+- Build rapport with internal stakeholders to encourage data-driven decision-making.
+- Helps to identify if there are data sources not within the current data warehouse.
+- Helps to identify if there may be data quality discrepancies across different business units.
+- Helps to achieve an unified data warehouse that allows for the mapping of user journeys.
+
+##### SLO achievement per data source
+
+This performance indicator tracks all metrics related to achieve the service-level objective (SLO) per data source.
+
+- Ensure data availability for data analytics and reporting for business units to make data-driven decisions.
+- Follow and improve our processes for maintaining high quality data and reporting.
+- Build rapport with internal stakeholders to encourage data-driven decision-making.
+- Encourage DataOps across the company.
+
 ## How To Connect With Us
 
 <div class="flex-row" markdown="0" style="height:80px">
