Updated team meeting info

--- a/sites/handbook/source/handbook/engineering/development/ops/monitor/respond/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/monitor/respond/index.html.md.erb
@@ -396,11 +396,16 @@ Service Ping is used for self-managed customers.  The table below was generated 
 
 - Slack channel: [#g_respond](https://gitlab.slack.com/archives/C02SHPPGZS5)
 - Slack alias: [@monitor-respond-group](https://app.slack.com/client/T02592416/C02SHPPGZS5/user_groups/SLFUX86HF)
-- All of our team meetings are on our [Monitor Stage team calendar](https://calendar.google.com/calendar?cid=Z2l0bGFiLmNvbV8xbGMyZHFpbjFoMXQ2MHFoNnJmcjJjZTE5OEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t)
 - Our Google groups are organized like this:
   - [Monitor Respond Group](mailto:monitor-respond-group@gitlab.com) (whole team)
     - [monitor-respond_be](mailto:monitor-respond-be@gitlab.com) (backend team)
     - [monitor-respond-fe](mailto:monitor-respond-fe@gitlab.com) (frontend team)
+- The Respond group team meetings are scheduled on our [Monitor Stage team calendar](https://calendar.google.com/calendar?cid=Z2l0bGFiLmNvbV8xbGMyZHFpbjFoMXQ2MHFoNnJmcjJjZTE5OEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t)
+  - The team holds a weekly sync meeting, alternating between 2 timezone groups (Wed @ 2100UTC and Thurs @ 1500UTC) and [meetings are recorded](https://drive.google.com/drive/u/0/folders/11oEDabI5blfcHz0P9dOZY6Oj_dHd0-wx).
+    - 1st week of the month - At the start of the quarter review the [roadmap](https://gitlab.com/groups/gitlab-org/-/epics/7013) and [product direction](https://about.gitlab.com/direction/monitor/debugging_and_health/incident_management/).
+    - 2nd week of the month - Walk through in-progress work on the [workflow dashboard](https://gitlab.com/groups/gitlab-org/-/boards/1160198).
+    - 3rd week of the month - Review the [planning issue](https://gitlab.com/gitlab-org/monitor/respond/-/issues/?label_name%5B%5D=Planning%20Issue) for the upcoming milestone.
+    - 4th week of the month - Demo new features and showcase any interesting work done within or outside of our team (in-person or recorded demos).
 
 ## Team members
 
