added co-author per Vick

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
@@ -1,12 +1,13 @@
 ---
 title: "GitLab and Oracle partner for a cloud native approach to modern
   application development"
-author: Vick Kelkar
-author_gitlab: vkelkar
+author: Vick Kelkar, Creighton Swank
+author_gitlab:
 categories: devops platform
 tags: DevOps, open source, cloud native, partners
 description: Learn the benefits of deploying the DevOps platform on Oracle Cloud
   Infrastructure.
+guest: true
 image_title: /images/blogimages/multi-cloud-future.jpg
 twitter_text: Deploying GitLab's DevOps platform on Oracle Cloud Infrastructure
   has many benefits. Find out what they are.
@@ -63,3 +64,5 @@ Organizations looking to run GitLab’s DevOps platform on OCI can leverage the 
 GitLab’s DevOps platform, delivered as a single application, can run on multiple clouds and has the capability of supporting various official [Linux packages](https://about.gitlab.com/install/). Besides Linux packages, GitLab’s platform also supports deployments on Kubernetes using [helm charts](https://docs.gitlab.com/charts/) and Kubernetes [GitLab Operator](https://docs.gitlab.com/operator/). 
 
 If you would like to learn more about the GitLab DevOps platform and OCI, please access the [LiveLabs](https://apexapps.oracle.com/pls/apex/dbpm/r/livelabs/home) after the Oracle Cloud World event.
+
+_[Kelkar](https://gitlab.com/vkelkar) is GitLab's Director of Alliances. Swank is Distinguished Cloud Architect and Cloud CTO for Oracle Cloud Infrastructure Services._
