added twitter image

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-why-devops-collaboration-continues-to-be-important.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-why-devops-collaboration-continues-to-be-important.html.md.erb
@@ -5,11 +5,13 @@ author_gitlab: vsilverthorne
 author_twitter: ValSilverthorne
 categories: devops platform
 tags: DevOps, developer survey, collaboration
+twitter_image: "/images/blogimages/gitlab-logo-500new1.jpg"
 description: Modern DevOps isn't just about tech adoption and new processes.
   DevOps collaboration is going to play a key role. Here's why.
 twitter_text: DevOps collaboration is going to matter even more going forward.
   Take our 12-question survey and tell us how your team handles collaboration
 ---
+
 It’s tempting to think the concept of DevOps collaboration is something no one needs to talk about anymore. After all, the methodology has been around for nearly 15 years, is in widespread use, and has clearly proven to be successful at getting safer software out the door faster. Haven’t we figured out DevOps collaboration by now?
 
 The answer is no, at least according to our [2022 Global DevSecOps Survey](/developer-survey/) and to market research firms looking at the future of DevOps.
