--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
@@ -58,11 +58,10 @@ GitLab’s DevOps platform can be deployed on vSphere infrastructure using the G
 OCI can provide government customers with the stringent security standards necessary to protect the federal government's data. Oracle has obtained a P-ATO from the Joint Authorization Board for FedRAMP High in its U.S. Government Cloud regions. Varying levels of DISA authorizations are also available but vary by services. Find an up-to-date list [here](https://www.oracle.com/industries/government/federal/fedramp/). Meanwhile, GitLab is pursuing a FedRAMP moderate certification and working on activities related to FedRAMP-ready designation. 
 
 ## Get started with the GitLab DevOps platform and OCI
-
 Organizations looking to run GitLab’s DevOps platform on OCI can leverage the supported [Oracle Linux](https://about.gitlab.com/install/) package for the platform install. Alternatively, they can leverage the helm chart or GitLab Operator to deploy to Oracle Kubernetes Engine (OKE), which will provide a [cloud-native hybrid approach](https://docs.gitlab.com/ee/administration/reference_architectures/25k_users.html#cloud-native-hybrid-reference-architecture-with-helm-charts-alternative) of the GitLab DevOps platform on OCI.
 
 GitLab’s DevOps platform, delivered as a single application, can run on multiple clouds and has the capability of supporting various official [Linux packages](https://about.gitlab.com/install/). Besides Linux packages, GitLab’s platform also supports deployments on Kubernetes using [helm charts](https://docs.gitlab.com/charts/) and Kubernetes [GitLab Operator](https://docs.gitlab.com/operator/). 
 
-If you would like to learn more about the GitLab DevOps platform and OCI, please access the [LiveLabs](https://apexapps.oracle.com/pls/apex/dbpm/r/livelabs/home) after the Oracle Cloud World event.
+If you would like to learn more about the GitLab DevOps platform and OCI, please access the [LiveLabs](https://apexapps.oracle.com/pls/apex/dbpm/r/livelabs/home).
 
 _[Kelkar](https://gitlab.com/vkelkar) is GitLab's Director of Alliances. Swank is Distinguished Cloud Architect and Cloud CTO for Oracle Cloud Infrastructure Services._
