--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-and-oracle-partner-for-a-cloud-native-approach-to-modern-application-development.html.md.erb
@@ -64,4 +64,4 @@ GitLab’s DevOps platform, delivered as a single application, can run on multip
 
 If you would like to learn more about the GitLab DevOps platform and OCI, please access the [LiveLabs](https://apexapps.oracle.com/pls/apex/dbpm/r/livelabs/home).
 
-_[Kelkar](https://gitlab.com/vkelkar) is GitLab's Director of Alliances. Swank is Distinguished Cloud Architect and Cloud CTO for Oracle Cloud Infrastructure Services._
+_[Kelkar](https://gitlab.com/vkelkar) is GitLab's Director of Alliances. Swank is Distinguished Cloud Architect and Cloud CTO at Oracle._
