Follow-up from "Dev Section Review" - Clarify points on no code/low code

--- a/source/direction/dev/template.html.md.erb
+++ b/source/direction/dev/template.html.md.erb
@@ -219,8 +219,8 @@ In three years, the Dev Section market will:
 * Have a market leader emerge in the value stream management space. Currently, the market is fragmented with most players focused on integrations into various DevOps tools.
 * Adopt a mindset shift from project management to product management.
 * Recognize the value of a single platform for all software creation activities, including product management.
-* See an uptick in startups, applications, and internal business logic being built on the backs of low or no-code platforms. We recently merged in a low/no-code [direction](/direction/create/nolowcode/) page if you'd like more information on our direction in this space.
-* Related to low/no code frameworks mentioned above, the market will see an increase in apps built on AI technology. In June of 2020, [GPT-3](https://en.wikipedia.org/wiki/GPT-3) was released and early adopters shared incredible use cases based on this technology. Within 3 years, it's likely this technology has advanced significantly and is starting to disrupt modern software development.
+* See an uptick in startups, applications, and internal business logic being built on the backs of low or no-code platforms, which will give rise to the [citizen developer](https://www.gartner.com/en/information-technology/glossary/citizen-developer)
+* See an increase in developer tools built on AI technology aimed at increasing efficiency, productivity, and security in code via automatic recommendations offered in-line in code editors
 * Coalesce around the notion of a single platform for DevOps, also known as Value Stream Delivery Platforms.
 
 As a result, in three years, GitLab will:
@@ -228,7 +228,7 @@ As a result, in three years, GitLab will:
 * Provide a next-generation, highly performant Git-backed version control system for large assets, such as ML models. Our goal in three years should be to host the most repositories of these non-code assets.
 * Emerge as the leader in VSM and be recognized in the industry by customers and analysts as such. Our goal in three years should be to provide the best insights into the product development process that no other tool can come close to, as we have a [unified data model](https://www.ca.com/en/blog-itom/what-is-a-unified-data-model-and-why-would-you-use-it.html) due to GitLab being a single platform.
 * Develop an industry-leading product management platform where multiple features and products can be measured and managed easily.
-* Research and potentially add capabilities for "no code" workflows and GPT-3 developed applications.
+* Provide an exellent developer experience via a robust Web IDE, browser-based IDE, support for the citizen developer via a low-code offering, and features that offer AI assistance to developers
 * Ensure we are the best VSDP on the market.
 
 ## 3 Year Themes
