Add line for Manuel Gass

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -392,6 +392,8 @@
 [Paulo Barros]: /company/team/#paulobarros
 [Omar Fernandez]: /company/team/#ofernandez2
 [Isabel Sandin]: /company/team/#isandin
+[Alex Martin]: /company/team/#alex_martin
+[Manuel Gass]: /company/team/#mgass1
 
 
 [Development Department]: /handbook/engineering/development/
