--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -36,6 +36,7 @@
 [Christina Lohr]: /company/team/#lohrc
 [Orit Golowinski]: /company/team/#ogolowinski
 [Orit Golowinski (Interim)]: /company/team/#ogolowinski
+[Urvi Chetta]: /company/team/#uchetta
 [Magdalena Frankiewicz (Acting)]: /company/team/#m_frankiewicz
 [Jackie Porter]: /company/team/#jreporter
 [Jensen Stava]: /company/team/#jstava
