Add code owners process to handbook

--- a/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
@@ -411,3 +411,17 @@ As the author of an MR you should reassign to another reviewer or maintainer if 
 [1:1 meetings]: /handbook/leadership/1-1/
 [dashboard]: https://app.periscopedata.com/app/gitlab/475647/Engineer-:-Maintainer-Ratio
 [ratio]: https://app.periscopedata.com/app/gitlab/655064/Merge-Requests:-MR-Count-and-Ratio-by-FE-BE-DB
+
+## Code Owner approvals
+
+Some GitLab projects use GitLab's [CODEOWNERS file feature](https://docs.gitlab.com/ee/user/project/code_owners.html) to manage approvals for specific file paths and types. In the `gitlab-org/gitlab` project, [we use a combination of CODEOWNERS approval rules plus MR approval settings](https://docs.gitlab.com/ee/development/code_review.html#merging-a-merge-request) in order to follow segregation of duties best practices. This section describes the process for updating the eligible approvers for CODEOWNERS changes for the `gitlab-org/gitlab` project.
+
+The Code Owners for the [CODEOWNERS file](https://gitlab.com/gitlab-org/gitlab/-/blob/master/.gitlab/CODEOWNERS) itself are managed with a rule in the file. For example:
+
+```
+CODEOWNERS @gitlab-org/development-leaders @gitlab-org/tw-leadership
+```
+
+There are two ways to update the Code Owner(s) of the `CODEOWNERS` file:
+1. Update the membership of a group that already has the ability to approve CODEOWNERS changes via the [standard access request process](https://about.gitlab.com/handbook/business-technology/team-member-enablement/onboarding-access-requests/access-requests/).
+2. Open a merge request to update the relevant lines. An existing Code Owner will have to approve the merge request. You are also encouraged to ping a security compliance team member for visibility.
